update go analysis notebooks

--- a/2_tads/2.7.go_ontology_anlaysis.ipynb
+++ b/2_tads/2.7.go_ontology_anlaysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "792909c0-991b-4dbc-8819-55573965a9eb",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "58bf9970-e094-469e-942e-634ebbb94700",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "04cfa9e6-a992-46ef-98e7-71084cf9d846",
    "metadata": {},
    "outputs": [
@@ -163,8 +163,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "dbb12b0b-610e-43e9-917d-20d304e88c1c",
+   "execution_count": 16,
+   "id": "57f62bc0-c784-46ea-878a-e89c55d6d026",
    "metadata": {},
    "outputs": [
     {
@@ -227,12 +227,14 @@
    ],
    "source": [
     "gsea_down_tads <- perform_gsea(genes_in_down_pm, gene_back, cutoff = 0.8)\n",
-    "create_treeplot_main(gsea_down_tads$pairwise_similarity, \"./tads_visualizations/tads_borders_gsea_down_tads_borders.pdf\", height=4.3, showCategory=15)\n"
+    "s = create_treeplot_main(gsea_down_tads$pairwise_similarity, \"./tads_visualizations/tads_borders_gsea_down_tads_borders.pdf\", height=4.3, showCategory=15)\n",
+    "write.csv(as.data.frame(s$data), \"./saved_data/trees/GO_fig3f.csv\")\n",
+    "s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "2e1f46f4-3057-4cc2-98d9-f4adc1956611",
    "metadata": {},
    "outputs": [],
@@ -240,6 +242,14 @@
     "write.csv(genes_in_down_pm, \"./saved_data/fig3_f_case_genes_in_down_pm_tads.csv\", row.names = FALSE)\n",
     "write.csv(gene_back, \"./saved_data/fig3_f_background_gene_back.csv\", row.names = FALSE)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61b6fa30-9a64-458f-ab06-be211b1235b9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
